hiding email with an image

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <img class="footer-body_linck" src="img/twitter (1).png" alt="twitter">
           <img class="footer-body_linck" src="img/instagram.png" alt="instagram">
         </div>
-        <div class="footer-body_email">jesusperez0494@gmail.com</div>
+        <img class="footer-body_email" src="img/email.png" alt="img">
       </div>
     </footer>
     <script>
