--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <script>
       var animation = bodymovin.loadAnimation({
       container: document.getElementById('animation-container'),
-      path: 'https://lottie.host/49363637-7e76-455d-81fa-32ac379261a3/bczHtOFePS.json',
+      path: 'anima.json',
       renderer: 'svg', 
       loop: true, 
       autoplay: true, 
